Repair dark mode functionality

--- a/quarto_styles.css
+++ b/quarto_styles.css
@@ -418,7 +418,7 @@ pre.sourceCode {
   position: relative;
   display: flex;
   justify-content: center;
-  color: var(--stan-highlight);
+  color: var(--stan-hero);
   background-color: var(--stan-dark);
   border: 10px solid var(--stan-secondary);
 }
@@ -456,6 +456,11 @@ pre.sourceCode {
   width: 75%;
 }
 
+.second-banner h2 {
+  background-color: var(--stan-bg);
+  border-radius: 5px;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: auto repeat(4, 1fr);
@@ -486,7 +491,7 @@ pre.sourceCode {
 /* when we think we're all on one line, remove the double bars */
 @container (min-width: 500px) {
   .grid-item + .grid-item {
-    margin-left: -1px;
+    border-left: none;
   }
 }
 
@@ -528,4 +533,28 @@ pre.sourceCode {
 #prerequsite-box,
 #install-box {
   container-type: inline-size;
+}
+
+/* Table Styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border-top: 1px solid var(--stan-dark); /* Adds top border to the table */
+  border-bottom: 1px solid var(--stan-dark); /* Adds bottom border to the table */
+}
+
+th,
+td {
+  border: none; /* Removes borders from table cells */
+  padding: 0.5em; /* Adjusts padding as needed */
+}
+
+thead th {
+  background-color: var(--stan-bg);
+  color: var(--stan-dark);
+}
+
+tbody td:first-child {
+  background-color: var(--stan-bg);
+  color: var(--stan-dark);
 }
