--- a/theme-colors.scss
+++ b/theme-colors.scss
@@ -8,4 +8,5 @@ $navy-blue: #052744;
 $warm-gray: #053A42;
 
 $pale-aquatic-blue: #AED1E4;
+$paler-aquatic-blue: #cee9f7;
 $off-white: #FAF1E4;
