--- a/theme-dark.scss
+++ b/theme-dark.scss
@@ -47,6 +47,8 @@ $sidebar-fg: $off-white;
     --stan-bg: #242424;
     --stan-highlight: #{$warm-gray};
     --stan-secondary: #{$pale-aquatic-blue};
+    --stan-dark: #{$aquatic-blue};
+    --stan-hero: #{$paler-aquatic-blue};
 }
 
 
