--- a/theme.scss
+++ b/theme.scss
@@ -23,36 +23,9 @@ $sidebar-fg: $navy-blue;
   --stan-highlight: #{$warm-beige};
   --stan-secondary: #{$aquatic-blue};
   --stan-dark: #{$navy-blue};
+  --stan-hero: #{$warm-beige};
 }
 
 /* Custom Styles */
 
-/* Level 2 Headings */
-h2 {
-  background-color: $palest-beige;
-  border-radius: 5px;
-}
-
-/* Table Styles */
-table {
-  width: 100%;
-  border-collapse: collapse;
-  border-top: 1px solid $navy-blue;   /* Adds top border to the table */
-  border-bottom: 1px solid $navy-blue; /* Adds bottom border to the table */
-}
-
-th, td {
-  border: none;        /* Removes borders from table cells */
-  padding: 0.5em;      /* Adjusts padding as needed */
-}
-
-thead th {
-  background-color: $palest-beige;
-  color: $navy-blue;
-}
-
-tbody td:first-child {
-    background-color: $palest-beige;
-    color: $navy-blue;
-}
 
